--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Avijeet Ranawat" width="80">
+          <img src="./assets/images/profile.jpg" alt="Avijeet Ranawat" width="80">
         </figure>
 
         <div class="info-content">
@@ -96,14 +96,6 @@
           <li class="contact-item">
 
             <div class="icon-box">
-              <ion-icon name="calendar-outline"></ion-icon>
-            </div>
-
-          </li>
-
-          <li class="contact-item">
-
-            <div class="icon-box">
               <ion-icon name="location-outline"></ion-icon>
             </div>
 
@@ -122,19 +114,19 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="linkedin.com/in/avijeet-ranawat" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="twitter.com/aviranawat" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="instagram.com/avijeetranawat" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
@@ -199,16 +191,19 @@
 
         <section class="about-text">
           <p>
-			I work as a Machine Learning Engineer and AI Researcher, having earned a Masters in Computer Science Degree from Georgia Tech.
+			I am a highly skilled Machine Learning Engineer and AI Researcher with a Master's Degree in Computer Science from Georgia Tech.
           </p>
 
           <p>
-			As a seasoned professional with over 5 years devoted to the field of machine learning, my journey has led me through diverse roles,
-			ranging from Systems Engineer to Data Scientist to Machine Learning Engineer.
-			Along the way, I've spearheaded impactful projects across a spectrum of industries,
-			actively contributing to the forefront of AI research.
-			Notably, my recent involvement in significant endeavors such as LLM and Generative AI
-			underscores my commitment to pushing the boundaries of innovation in the field.
+		  With over five years of dedication to the field of machine learning,
+		  I've embarked on a diverse journey through various roles, from Systems Engineer to Data Scientist to Machine Learning Engineer.
+		  Throughout this journey, I've spearheaded impactful projects across a wide range of industries,
+		  actively contributing to the forefront of AI research.
+          </p>
+		  
+		  <p>
+			Notably, my recent involvement in groundbreaking endeavors such as Large Language Models (LLMs)
+			and Generative AI underscores my unwavering commitment to pushing the boundaries of innovation in this ever-evolving field.
           </p>
         </section>
 
@@ -234,8 +229,8 @@
                 <h4 class="h4 service-item-title">Natural Language Processing</h4>
 
                 <p class="service-item-text">
-                Developed algorithms and models to enhance computers' ability to comprehend,
-				analyze, and generate human language for various applications, such as machine translation, sentiment analysis, and chatbots.
+                Developed algorithms and models to enhance computers ability to comprehend,
+				analyze, and generate human language for various applications such as machine translation, sentiment analysis, chatbots etc.
                 </p>
               </div>
 
@@ -251,7 +246,7 @@
                 <h4 class="h4 service-item-title">Machine Learning Development</h4>
 
                 <p class="service-item-text">
-                Designed and implemented algorithms that enable the model to learn patterns from data,
+                Designed and implemented algorithms that enabled the model to learn patterns from data,
 				make predictions, and continually improve its performance through iterative training processes.
                 </p>
               </div>
@@ -284,8 +279,8 @@
                 <h4 class="h4 service-item-title">Computer Vision</h4>
 
                 <p class="service-item-text">
-                  Develop algorithms and models that enabled machines to interpret and make sense of visual information from the world.
-				  This involves tasks such as image recognition, object detection, segmentation etc.
+                  Develop algorithms and models that enabled machines to interpret and make sense of visual information
+				  from the world involving tasks such as image recognition, object detection, segmentation etc.
                 </p>
               </div>
 
