--- a/index.html
+++ b/index.html
@@ -114,26 +114,26 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="www.linkedin.com/in/avijeet-ranawat" class="social-link">
+            <a href="https://www.linkedin.com/in/avijeet-ranawat" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 		  
 		  <li class="social-item">
-            <a href="www.github.com/AvijeetRanawat" class="social-link">
+            <a href="https://www.github.com/AvijeetRanawat" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 		  
 
           <li class="social-item">
-            <a href="www.twitter.com/aviranawat" class="social-link">
+            <a href="https://www.twitter.com/aviranawat" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="www.instagram.com/avijeetranawat" class="social-link">
+            <a href="https://www.instagram.com/avijeetranawat" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
