--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:avijeet96@gmail.com" class="contact-link">avijeet96@gmail.com</a>
+              <a href="mailto:aranawat3@gatech.edu" class="contact-link">aranawat3@gatech</a>
             </div>
 
           </li>
@@ -327,25 +327,25 @@
           <ul class="clients-list has-scrollbar">
 
             <li class="clients-item">
-              <a href="#">
+			  <a href="https://www.gatech.edu" class="clients-item" target="_blank">
                 <img src="./assets/images/georgia_tech.png" alt="university logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="https://fractal.ai" class="clients-item" target="_blank">
                 <img src="./assets/images/fractal.png" alt="company logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="https://www.tcs.com" class="clients-item" target="_blank">
                 <img src="./assets/images/tcs.png" alt="company logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="https://www.rgpv.ac.in" class="clients-item" target="_blank">
                 <img src="./assets/images/rgpv.png" alt="university logo">
               </a>
             </li>
@@ -690,11 +690,11 @@
           </figure>
         </section>
 
-        <section class="contact-form">
+		<section class="contact-form">
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="#" class="form" data-form>
+          <form action="#" class="form" data-form onsubmit="return false;">
 
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
