--- a/index.html
+++ b/index.html
@@ -968,7 +968,7 @@
         <h5 class="h5">MySQL</h5>
       </div>
       <div class="skill-progress-bg">
-        <div class "skill-progress-fill database-management-progress"></div>
+        <div class="skill-progress-fill database-management-progress"></div>
       </div>
     </li>
     <!-- BigQuery Subcategory -->
