Added Blog section
also updated linkedin url

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/avijeet-ranawat" class="social-link" target="_blank">
+            <a href="https://www.linkedin.com/in/avijeetranawat" class="social-link" target="_blank">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
@@ -183,6 +183,11 @@
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
+		  
+		  <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>Blog</button>
+          </li>
+
 		  
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
@@ -1112,10 +1117,6 @@
 
 
 
-
-
-
-
       </article>
 
 
@@ -1223,6 +1224,56 @@
         </section>
 
       </article>
+
+
+      <!--
+        - #BLOG
+      -->
+
+      <article class="blog" data-page="blog">
+
+        <header>
+          <h2 class="h2 article-title">Blog</h2>
+        </header>
+
+        <section class="blog-posts">
+
+          <ul class="blog-posts-list">
+
+            <li class="blog-post-item">
+              <a href="#">
+
+                <figure class="blog-banner-box">
+                  <img src="./assets/images/gptlens.png" alt="GPTLens : Smart Contract Vulnerability Detection using LLM’s" loading="lazy">
+                </figure>
+
+                <div class="blog-content">
+
+                  <div class="blog-meta">
+                    <p class="blog-category">LLM's</p>
+
+                    <span class="dot"></span>
+
+                  </div>
+
+                  <h3 class="h3 blog-item-title">GPTLens : Smart Contract Vulnerability Detection using LLM’s</h3>
+
+                  <p class="blog-text">
+                    Detecting Vulnerability in Smart Contracts using LLM
+                  </p>
+
+                </div>
+
+              </a>
+            </li>
+
+
+          </ul>
+
+        </section>
+
+      </article>
+
 
 
 
