Updated resume section

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
               <h4 class="h4 timeline-item-title">Georgia Institute of Technology</h4>
 
-              <span>2022 — 2024</span>
+              <span>2021 — 2024</span>
 
               <p class="timeline-text">
               Master of Science in Computer Science with Specialization in Machine Learning
@@ -432,27 +432,26 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Data Scientist</h4>
+              <h4 class="h4 timeline-item-title">Fractal Analytics [Data Scientist]</h4>
 
               <span>2021 — 2023</span>
 
               <p class="timeline-text">
 				<ul class="timeline-text">
-					<li>Leveraged the power of TensorFlow Hub and NLP embeddings to achieve full automation, hitting a sweet 100% in generating marketing insights effortlessly.</li>
-					<li>Got hands-on with a mini-batch k-means clustering model for our unsupervised learning needs, supercharging training speeds.</li>
-					<li>Skillfully employed Regex for meticulous data cleaning, deftly eliminating unwelcome characters and ensuring data purity.</li>
-					<li>Translated raw text into machine-understandable language using sophisticated pretrained embeddings, sparing us the challenges of starting from square one.</li>
-					<li>Made parallel computing a breeze across different nodes using an in-house Docker like tool, keeping things smooth and distributed.</li>
-					<li>Implemented Google SQL to turbocharge data engineering operations, witnessing a significant 60% acceleration in our workflow.</li>
-					<li>Elevated data visualization to an art form with plotly and altair-viz, creating a client experience that was not just informative but downright delightful.</li>
-					<li>Built a rock-solid code base on the Google Cloud Platform, making work of processing billions of records with a jaw-dropping 40% reduction in processing time.</li>
-					<li>Led the development of a robust causal impact analysis for Sony PlayStation, diving deep into the world of game analytics to understand how tournaments shake up the revenue landscape.</li>
-					<li>Employed a mix of models, including XgBoost, Random Forest, Decision trees, for feature selection to enhance the system’s capabilities.</li>
-					<li>Conducted A/B testing meticulously, unraveling insights from test vs control scenarios to inform strategic decisions.</li>
-					<li>Ensured statistical integrity by cross-verifying results through T-tests, emphasizing the importance of robust data analysis.</li>
-					<li>Leveraged Microsoft Office tools, particularly Power BI, to present complex findings in a clear and compelling manner to our clients.</li>
-					<li>Embraced the flexibility of Scala, optimizing the system for scalability and efficient multitasking.</li>
-					<li>Incorporated NoSQL databases seamlessly, enhancing data storage and retrieval methods for improved operational efficiency.</li>
+					<li>Automated marketing insights with <strong>TensorFlow Hub</strong> and <strong>NLP embeddings</strong>, achieving <strong>100% efficiency</strong>. Developed foundation models on <strong>Google Cloud Platform</strong>, reducing processing time by <strong>40%</strong>.</li>
+					<li>Enhanced data pipeline efficiency with <strong>Apache Kafka</strong> for streaming and <strong>Airflow</strong> for workflow orchestration. Boosted data engineering operations by <strong>60%</strong> with <strong>Google SQL</strong> and <strong>BigQuery</strong>.</li>
+					<li>Executed nuanced <strong>feature selection</strong> with <strong>XgBoost</strong>, <strong>Random Forest</strong>, and <strong>Decision Trees</strong>. Led <strong>recommendation system</strong> development along with POC for <strong>reinforcement learning</strong>, improving user experience.</li>
+					<li>Orchestrated large-scale distributed systems with <strong>Kubernetes</strong>, ensuring efficiency and scalability. Maintained high-quality software development using <strong>Vertex AI</strong>.</li>
+					<li>Conducted <strong>causal impact analysis</strong> for Sony PlayStation, integrating <strong>T-tests</strong> for data analysis. Utilized <strong>Power BI</strong> for clear client presentations.</li>
+					<li>Optimized parallel computing workflows using a tool akin to <strong>Docker</strong>. Adopted <strong>Scala</strong> for system optimization and integrated <strong>NoSQL</strong> databases for operational excellence.</li>
+					<li>Refined data visualization using <strong>plotly</strong> & <strong>altair-viz</strong> and ensured data integrity with <strong>Regex</strong>.</li>
+					<li>Leveraged <strong>Azure cloud computing</strong> capabilities to implement a <strong>mini-batch k-means clustering</strong> model, significantly enhancing training efficiency for large-scale <strong>unsupervised learning</strong> applications.</li>
+					<li>Developed advanced <strong>Text Classification</strong> and <strong>Entity Recognition</strong> systems, enhancing data processing and analytics capabilities in large datasets.</li>
+					<li>Implemented <strong>Machine Translation</strong> and <strong>Language Generation</strong> algorithms to facilitate cross-lingual communication and content creation.</li>
+					<li>Spearheaded a <strong>Topic Modeling</strong> and <strong>Text Summarization</strong> project, synthesizing vast amounts of text data into concise, informative summaries.</li>
+					<li>Employed <strong>Artificial Intelligence</strong> and <strong>Statistics</strong> for advanced data analysis and insights.</li>
+					<li>Implemented <strong>Data Science</strong> principles, focusing on <strong>Data Modeling</strong>, <strong>MLOps</strong>, and efficient <strong>Data Structures</strong> and <strong>Algorithms</strong>.</li>
+
 				</ul>
               </p>
 
@@ -460,23 +459,23 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Machine Learning Engineer</h4>
+              <h4 class="h4 timeline-item-title">Tata Consultancy Services [Machine Learning Engineer]</h4>
 
               <span>2019 — 2021</span>
 			  
 			<p class="timeline-text">
 				<ul class="timeline-text">
-					<li>Initiated the journey by delving into the classics, exploring Linear Regression, Logistic Regression, and Support Vector Machines to test the waters and establish a foundational understanding.</li>
-					<li>Revolutionized the support team’s workflow, wielding the power of a Random Forest classification model to enchantingly slash their manual workload by an impressive 80% through the wonders of Supervised learning.</li>
-					<li>Got crafty and built a custom entity recognizer using the spaCy library – because sometimes, off-the-shelf just won’t cut it.</li>
-					<li>Tackled class imbalance head-on with the SMOTE technique. No imbalances allowed on my watch.</li>
-					<li>Conducted a symphony of APIs using the dynamic duo: Django and Flask REST framework to get harmonious deployments.</li>
-					<li>Weaved a Dialog Flow Chatbot into our internal toolkit, making knowledge retrieval and Q/A a breeze.</li>
-					<li>Did a bit of number magic with feature scaling, courtesy of our trusty standard scalar.</li>
-					<li>Delved into the realm of possibilities by experimenting with an MLP Neural Networks model, seeking to harness the potential of deep learning.</li>
-					<li>Played detective with missing data, bringing in KNN imputation to solve the mystery.</li>
-					<li>Got wordy with data preprocessing, removing stop words and giving our words a good lemmatization scrub with the help of NLTK.</li>
-					<li>Assumed the role of an engineering virtuoso, conjuring up new features like counting POS tags, calculating the average length of words, and more through some nifty feature engineering.</li>
+					<li>Revolutionized support operations with an <strong>80% workload reduction</strong> using <strong>Linear Regression</strong>, <strong>Logistic Regression</strong>, and <strong>Support Vector Machines</strong> models and advanced <strong>Supervised learning</strong>.</li>
+					<li>Enhanced data processing efficiency in large-scale projects using <strong>C/C++</strong> and accelerated deep learning development with <strong>Keras</strong> and <strong>MLP Neural Networks</strong>.</li>
+					<li>Created compelling data visualizations with <strong>Matplotlib</strong> and <strong>Seaborn</strong>. Built a custom entity recognizer with the <strong>spaCy</strong> library and integrated APIs using <strong>Django</strong> and <strong>Flask REST framework</strong>.</li>
+					<li>Led a team of data scientists and engineers in machine learning model development. Improved user interfaces and experiences through cross-functional collaboration.</li>
+					<li>Applied <strong>feature scaling</strong> with a standard scalar and tackled class imbalance using the <strong>SMOTE</strong> technique.</li>
+					<li>Handled missing data with <strong>KNN imputation</strong> and enhanced data quality through comprehensive preprocessing, including <strong>lemmatization</strong> with <strong>NLTK</strong>.</li>
+					<li>Showcased innovation in <strong>feature engineering</strong>, developing unique features to enrich data analysis.</li>
+					<li>Applied <strong>Dependency Parsing</strong> and <strong>Semantic Analysis</strong> to understand and interpret complex sentence structures, enhancing the natural language understanding of AI systems.</li>
+					<li>Designed and integrated <strong>Dialog Systems</strong> and <strong>Question Answering Systems</strong>, improving user interaction and information retrieval accuracy.</li>
+					<li>Developed <strong>Text-to-Speech</strong> and <strong>Speech Recognition</strong> capabilities, broadening the scope of voice-enabled application functionalities.</li>
+
 				</ul>
               </p>
 
@@ -485,18 +484,16 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Assistant System Engineer</h4>
+              <h4 class="h4 timeline-item-title">Tata Consultancy Services [Assistant System Engineer]</h4>
 
               <span>2018 — 2019</span>
 			  
 			<p class="timeline-text">
 			<ul class="timeline-text">
-				<li>Embarked on thrilling projects for a major player in the finance world – J.P. Morgan Chase, right in the heart of their Home Mortgage division.</li>
-				<li>Wielded the power of Java to craft automated regression test scripts, turning the tedious Loan Application processes into a smoothly orchestrated performance.</li>
-				<li>Revolutionized testing efforts by seamlessly integrating the TestNg framework, orchestrating a spectacular 75% reduction in testing time.</li>
-				<li>Played data maestro with MySQL and MongoDB databases, ensuring that data management was as smooth as a well-played symphony.</li>
-				<li>Infused a touch of JavaScript, HTML, and CSS expertise to enchantingly enhance the user interfaces and functionality of our web app, because we believe in the significance of an exceptional user experience.</li>
-				<li>Showcased not just technical prowess but also outstanding communication and presentation skills, leaving a lasting impression during client interactions.</li>
+				<li>Achieved a <strong>75% reduction</strong> in testing time for a banking domain client by integrating the <strong>TestNg framework</strong> and crafting automated <strong>regression test</strong> scripts using <strong>Java</strong>.</li>
+				<li>Masterfully managed <strong>MySQL</strong> and optimized <strong>MongoDB</strong> databases, ensuring efficient data storage and retrieval, while also enhancing web app interfaces and functionality with <strong>JavaScript</strong>, <strong>HTML</strong>, and <strong>CSS</strong>.</li>
+				<li>Expertly utilized <strong>Git</strong> and <strong>GitHub</strong> for version control and collaborative software development. Demonstrated exceptional <strong>communication</strong> and <strong>presentation skills</strong> during client interactions.</li>
+
 
 			</ul>
 			</p>
@@ -1241,7 +1238,7 @@
           <ul class="blog-posts-list">
 
             <li class="blog-post-item">
-              <a href="#">
+              <a href="https://medium.com/@avijeet96/gptlens-smart-contract-vulnerability-detection-using-llms-0519ff9709b1" target="_blank">
 
                 <figure class="blog-banner-box">
                   <img src="./assets/images/gptlens.png" alt="GPTLens : Smart Contract Vulnerability Detection using LLM’s" loading="lazy">
