--- a/index.html
+++ b/index.html
@@ -1268,6 +1268,42 @@
           </ul>
 
         </section>
+		
+		        <section class="blog-posts">
+
+          <ul class="blog-posts-list">
+
+            <li class="blog-post-item">
+              <a href="https://medium.com/@avijeet96/can-language-models-solve-graph-problems-in-natural-language-neurips-2023-199caaa117c0" target="_blank">
+
+                <figure class="blog-banner-box">
+                  <img src="./assets/images/graph_llm.png" alt="Can Language Models Solve Graph Problems in Natural Language" loading="lazy">
+                </figure>
+
+                <div class="blog-content">
+
+                  <div class="blog-meta">
+                    <p class="blog-category">LLM's</p>
+
+                    <span class="dot"></span>
+
+                  </div>
+
+                  <h3 class="h3 blog-item-title">Can Language Models Solve Graph Problems in Natural Language?</h3>
+
+                  <p class="blog-text">
+                    NLG Benchmark to test LLMs on graphical structures
+                  </p>
+
+                </div>
+
+              </a>
+            </li>
+
+
+          </ul>
+
+        </section>
 
       </article>
 
